--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy==0.56.4
+numba==0.56.4
 llvmlite==0.39.1
 librosa==0.9.2
-tensorflow==2.10.0
 
+tensorflow==2.10.0
+numpy
 matplotlib
 scikit-learn
 flask
