--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-numba==0.56.4
-llvmlite==0.39.1
-librosa==0.9.2
-
-tensorflow==2.10.0
+numba
+llvmlite
+librosa
+tensorflow
 numpy
 matplotlib
 scikit-learn
